Fix issue with tooltip content overflowing parent container

--- a/sass/stats/QueryComparisonLineChart.scss
+++ b/sass/stats/QueryComparisonLineChart.scss
@@ -17,7 +17,6 @@
 		}
 
 		.bg__comparative_queryLine {
-			width: calc(100% / 3);
 			flex-wrap: wrap;
 			flex: initial;
 			padding: 15px;
